--- a/index.html
+++ b/index.html
@@ -10,7 +10,191 @@
 </head>
 
 <body>
-    <h1>panda roj khai anda</h1>
+    <header class="container">
+        <nav class="navbar navbar-expand-lg bg-light">
+            <div class="container">
+                <a class="navbar-brand" href="#"> <img src="images/logo.png" alt="Bootstrap">
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Link</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">backpack</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">subscribe</a>
+                        </li>
+
+                    </ul>
+
+                </div>
+            </div>
+        </nav>
+        <!-- slider start -->
+        <section class="mt-5">
+            <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active bg-info border rounded p-5">
+                        <div class="row">
+                            <div class="col-lg-7 d-flex align-items-center">
+                                <div>
+                                    <h2>cool dude headphone</h2>
+                                    <p>this is the best headphone in the world for people who just want to waste time in
+                                        from of funky world</p>
+                                    <h1>$420</h1>
+                                    <div class="btn btn-warning">buy now</div>
+                                </div>
+                            </div>
+                            <div class="col-lg-5">
+                                <img src="images/images/banner-images/headphone.png" class="d-block w-100" alt="...">
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="carousel-item active bg-info border rounded p-5">
+                        <div class="row">
+                            <div class="col-lg-7 d-flex align-items-center">
+                                <div>
+                                    <h2>cool dude headphone</h2>
+                                    <p>this is the best headphone in the world for people who just want to waste time in
+                                        from of funky world</p>
+                                    <h1>$420</h1>
+                                    <div class="btn btn-warning">buy now</div>
+                                </div>
+                            </div>
+                            <div class="col-lg-5">
+                                <img src="images/images/banner-images/tv.png" class="d-block w-100" alt="...">
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <div class="carousel-item active bg-info border rounded p-5">
+                        <div class="row">
+                            <div class="col-lg-7 d-flex align-items-center">
+                                <div>
+                                    <h2>cool dude headphone</h2>
+                                    <p>this is the best headphone in the world for people who just want to waste time in
+                                        from of funky world</p>
+                                    <h1>$420</h1>
+                                    <div class="btn btn-warning">buy now</div>
+                                </div>
+                            </div>
+                            <div class="col-lg-5">
+                                <img src="images/images/banner-images/xbox.png" class="d-block w-100" alt="...">
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </section>
+        <!-- slider end -->
+    </header>
+    <main>
+        <!-- categories sta1rt -->
+        <section>
+            <div class="container text-center my-5">
+                <!-- single category -->
+                <div class="row g-2">
+                    <div class="col-lg-4 col-md-6 col-sm-12">
+                        <div class="p-3 rounded-3 border bg-warning d-flex align-items-center justify-content-around">
+                            <h1 class="text-white">Watch</h1>
+                            <img src="images/images/categories/watch.png">
+                        </div>
+                    </div>
+                    <!-- single category -->
+                    <div class="col-lg-4 col-md-6 col-sm-12">
+                        <div class="p-3 rounded-3 border bg-success d-flex align-items-center justify-content-around">
+                            <h1 class="text-white">Watch</h1>
+                            <img src="images/images/categories/watch.png">
+                        </div>
+                    </div>
+                    <!-- single category -->
+                    <div class="col-lg-4 col-md-6 col-sm-12">
+                        <div class="p-3 rounded-3 border bg-primary d-flex align-items-center justify-content-around">
+                            <h1 class="text-white">Watch</h1>
+                            <img src="images/images/categories/watch.png">
+                        </div>
+                    </div>
+
+
+                </div>
+            </div>
+        </section>
+        <!-- categories end -->
+        <!-- shoes section starts -->
+        <section class="container my-5">
+            <h2>SHOES</h2>
+            <div class="row row-cols-1 row-cols-md-2 row-cols-md-3 g-4">
+                <div class="col">
+                    <div class="border border-0 shadow-lg card h-100">
+
+                        <img src="images/images/shoes/shoe-1.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">supply 350</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This content is a little bit longer.</p>
+                        </div>
+                        <div class="m-3">
+                            <div class="btn btn-warning">buy now</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="border border-0 shadow-lg card h-100">
+                        <img src="images/images/shoes/shoe-2.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">nike 360</h5>
+                            <p class="card-text">This card has supporting text below as a natural lead-in to additional
+                                content.</p>
+                        </div>
+                        <div class="m-3">
+                            <div class="btn btn-warning">buy now</div>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="border border-0 shadow-lg card h-100">
+                        <img src="images/images/shoes/shoe-3.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">red airmax</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This card has even longer content than the first to show that equal
+                                height action.</p>
+                        </div>
+                        <div class="m-3">
+                            <div class="btn btn-warning">buy now</div>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- shoes section ends -->
+
+    </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
         crossorigin="anonymous"></script>
